Ok now works with mirth 4.5.2.
For other versions I'll have to add radio buttons for what version and separate launch commands for each.

Will also need the other launcher versions that match up with releases.